--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  flex-wrap: wrap;
+flex-wrap: wrap;
+}
+
+.card-main{
+  position: relative;
+}
+
+.card-actions{
+  position: absolute;
+  display: flex;
+  width: 80%;
+  height: 5vh;
+  flex-direction: row;
+  justify-content: space-between;
+  bottom: 0;
 }
