--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
 }
-
-.product-main-card{
+.product-main-card {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
-.card-main{
+.card-main {
   position: relative;
+  width: '20vw';
+  height: '45vh'
 }
 
-.card-actions{
+.card-actions {
   position: absolute;
   display: flex;
   width: 80%;
