--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-*{
-  margin: 0;
-}
+
 .product-main-card {
   display: flex;
   flex-direction: row;
@@ -22,4 +20,12 @@
   flex-direction: row;
   justify-content: space-between;
   bottom: 0;
+}
+
+.box-spinner{
+  width: 100%;
+  height: 70vh;
+  /* border: 1px solid red; */
+  justify-content: center;
+  align-items: center;
 }
